# image-classifier

./: Makefile  pyproject.toml
src/: download.py  predict.py  preprocess.py
src/data/: base_transform.py
src/predictor/: ilsvrc_predictor.py
