[tool.poetry]
name = "image-classifier"
version = "0.1.0"
description = ""
authors = ["tighug <tighug.4696@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
requests = "^2.27.1"
torchvision = "^0.12.0"
numpy = "^1.22.3"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
mypy = "^0.942"
types-requests = "^2.27.20"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
